use getModulesRepository() instead of recalculating the value.